# - make one entry per person
# - group logical changes together
# - separate logically distinct changes (change sets) by a single blank line
# - entries should be brief
# - an entry should not explain why a change was made, but rather what the change was
#   (the explanation of why belongs in the source code itself)
#
# http://www.cybop.net
# - Cybernetics Oriented Programming -
#
# @version $Revision: 1.130 $ $Date: 2009-01-28 22:28:43 $ $Author: christian $
# @author Christian Heller <christian.heller@tuxtax.de>
#

2009-01-28  Christian Heller  <christian.heller@tuxtax.de>
        * Investigate signal processing, which does not work reliably

2009-01-27  Christian Heller  <christian.heller@tuxtax.de>
        * Simplify file "checker.c"
        * Investigate why only the first interrupt signal, but not following interrupts
            are detected on gnu/linux console

2009-01-26  Christian Heller  <christian.heller@tuxtax.de>
        * Correct a few pointer issues in file "checker.c"
        * Search bug that not all interrupts arrive correctly in functions "check_interrupts" and "check_signal"

2009-01-25  Christian Heller  <christian.heller@tuxtax.de>
        * Factor out handling of encapsulated- and knowledge logic into new files
            "encapsulated_handler.c" and "knowledge_handler.c"
        * Let both handle not only compound logic, but also operation logic
            (the latter was missing up to now, which is why some example application functions did not work)
        * Add tests for null pointer in file "x_window_system_communicator.c" to avoid
            a "Segmentation fault", if the X Window System was not started

2009-01-24  Christian Heller  <christian.heller@tuxtax.de>
        * Prepare "project plan" web page for coming 0.9.0 release
        * Search and fix "Bus error" bug appearing since the autoconf/ make files were adapted to 64 Bit architecture: