@@ -19,7 +19,7 @@
  * Cybernetics Oriented Programming (CYBOP) <http://www.cybop.org>
  * Christian Heller <christian.heller@tuxtax.de>
  *
- * @version $RCSfile: gnu_linux_console_shutting_maintainer.c,v $ $Revision: 1.8 $ $Date: 2009-01-18 00:22:31 $ $Author: christian $
+ * @version $RCSfile: gnu_linux_console_shutting_maintainer.c,v $ $Revision: 1.9 $ $Date: 2009-01-29 16:14:12 $ $Author: christian $
  * @author Christian Heller <christian.heller@tuxtax.de>
  */
 
@@ -69,12 +69,10 @@ void maintain_shutting_gnu_linux_console(void* p0, void* p1, void* p2) {
         // The gnu/linux console input- and output stream.
         FILE** ip = (FILE**) NULL_POINTER_MEMORY_MODEL;
         FILE** op = (FILE**) NULL_POINTER_MEMORY_MODEL;
-/*??
-        // The original termios interface.
-        struct termios** to = (struct termios**) NULL_POINTER_MEMORY_MODEL;
-        // The working termios interface.
-        struct termios** tw = (struct termios**) NULL_POINTER_MEMORY_MODEL;
-*/
+        // The old termios settings.
+        struct termios** to = (struct termios**) *NULL_POINTER_MEMORY_MODEL;
+        // The new termios settings.
+        struct termios** tn = (struct termios**) *NULL_POINTER_MEMORY_MODEL;
         // The character buffer that was used in the thread procedure.
         void** b = NULL_POINTER_MEMORY_MODEL;
         void** bc = NULL_POINTER_MEMORY_MODEL;
@@ -83,33 +81,31 @@ void maintain_shutting_gnu_linux_console(void* p0, void* p1, void* p2) {
         // Get gnu/linux console internals.
         get_element(p0, (void*) GNU_LINUX_CONSOLE_INPUT_FILE_DESCRIPTOR_INTERNAL_MEMORY_MEMORY_NAME, (void*) &ip, (void*) POINTER_VECTOR_MEMORY_ABSTRACTION, (void*) POINTER_VECTOR_MEMORY_ABSTRACTION_COUNT);
         get_element(p0, (void*) GNU_LINUX_CONSOLE_OUTPUT_FILE_DESCRIPTOR_INTERNAL_MEMORY_MEMORY_NAME, (void*) &op, (void*) POINTER_VECTOR_MEMORY_ABSTRACTION, (void*) POINTER_VECTOR_MEMORY_ABSTRACTION_COUNT);
-/*??
         get_element(p0, (void*) GNU_LINUX_CONSOLE_ORIGINAL_ATTRIBUTES_INTERNAL_MEMORY_MEMORY_NAME, (void*) &to, (void*) POINTER_VECTOR_MEMORY_ABSTRACTION, (void*) POINTER_VECTOR_MEMORY_ABSTRACTION_COUNT);
-        get_element(p0, (void*) GNU_LINUX_CONSOLE_WORKING_ATTRIBUTES_INTERNAL_MEMORY_MEMORY_NAME, (void*) &tw, (void*) POINTER_VECTOR_MEMORY_ABSTRACTION, (void*) POINTER_VECTOR_MEMORY_ABSTRACTION_COUNT);
-*/
+        get_element(p0, (void*) GNU_LINUX_CONSOLE_WORKING_ATTRIBUTES_INTERNAL_MEMORY_MEMORY_NAME, (void*) &tn, (void*) POINTER_VECTOR_MEMORY_ABSTRACTION, (void*) POINTER_VECTOR_MEMORY_ABSTRACTION_COUNT);
         // Get character buffer.
         get_element(p0, (void*) GNU_LINUX_CONSOLE_THREAD_CHARACTER_BUFFER_INTERNAL_MEMORY_MEMORY_NAME, (void*) &b, (void*) POINTER_VECTOR_MEMORY_ABSTRACTION, (void*) POINTER_VECTOR_MEMORY_ABSTRACTION_COUNT);
         get_element(p0, (void*) GNU_LINUX_CONSOLE_THREAD_CHARACTER_BUFFER_COUNT_INTERNAL_MEMORY_MEMORY_NAME, (void*) &bc, (void*) POINTER_VECTOR_MEMORY_ABSTRACTION, (void*) POINTER_VECTOR_MEMORY_ABSTRACTION_COUNT);
         get_element(p0, (void*) GNU_LINUX_CONSOLE_THREAD_CHARACTER_BUFFER_SIZE_INTERNAL_MEMORY_MEMORY_NAME, (void*) &bs, (void*) POINTER_VECTOR_MEMORY_ABSTRACTION, (void*) POINTER_VECTOR_MEMORY_ABSTRACTION_COUNT);
 
-/*??
-        // Get file descriptor for output file stream.
-        int opd = fileno(*op);
-        // Reset original gnu/linux console attributes.
-        tcsetattr(opd, TCSANOW, *to);
-*/
+        // Get file descriptor for file stream.
+        // CAUTION! The stream "stdin" must be used instead of "stdout" here!
+        int d = fileno(*ip);
+
+        // Reset terminal to old settings.
+        tcsetattr(d, TCSANOW, (void*) *to);
 
 /*??
-        // Destroy gnu/linux console internals.
+        // Deallocate input- and output stream.
         //
-        // CAUTION! Use descending order, as opposed to the creation!
-        // CAUTION! Do NOT use references &, because variables are **
-        // and *&variable equals the variable alone.
-        //?? DO NOT deallocate t because it refers to stdout of the system for testing!
-        //?? deallocate((void*) t, (void*) PRIMITIVE_MEMORY_MODEL_COUNT, (void*) INTEGER_VECTOR_MEMORY_ABSTRACTION, (void*) INTEGER_VECTOR_MEMORY_ABSTRACTION_COUNT);
-        free(*tw);
-        free(*to);
+        // CAUTION! DO NOT deallocate ip and op because they refer to stdin and stdout of the system!
+        // This might be changed at a (much) later point in CYBOI development.
+        deallocate((void*) &ip, (void*) PRIMITIVE_MEMORY_MODEL_COUNT, (void*) INTEGER_VECTOR_MEMORY_ABSTRACTION, (void*) INTEGER_VECTOR_MEMORY_ABSTRACTION_COUNT);
+        deallocate((void*) &op, (void*) PRIMITIVE_MEMORY_MODEL_COUNT, (void*) INTEGER_VECTOR_MEMORY_ABSTRACTION, (void*) INTEGER_VECTOR_MEMORY_ABSTRACTION_COUNT);
 */
+        // Deallocate termios settings.
+        free(*to);
+        free(*tn);
 
         // Deallocate character buffer.
         deallocate((void*) b, *bs, (void*) WIDE_CHARACTER_VECTOR_MEMORY_ABSTRACTION, (void*) WIDE_CHARACTER_VECTOR_MEMORY_ABSTRACTION_COUNT);
